[package]
name = "ls-sns"
version.workspace = true
edition.workspace = true

[dependencies]
ls-asf = { path = "../ls-asf" }
ls-store = { path = "../ls-store" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
ls-sqs = { path = "../ls-sqs" }
