[package]
name = "ls-sqs"
version.workspace = true
edition.workspace = true

[dependencies]
ls-asf = { path = "../ls-asf" }
ls-store = { path = "../ls-store" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
md5 = { workspace = true }
dashmap = { workspace = true }
